# tosoo-matlab-sdk

./: README.md
+tosoo3/: .gitignore  CLAUDE.md  LICENSE.txt  README.md  read_data.m  read_metadata.m
+tosoo3/+parquet_metadata/: README.md  ThriftCompactParser.m  generate_test_files.py  pyproject.toml  readMetadata.m  test_write_roundtrip_brotli_matlab.m  writeMetadata.m
+tosoo6/: read_data.m  read_metadata.m
+tosoo6/+parquet_metadata/: LICENSE.txt  readMetadata.m  run_all_matlab_tests.m  test_read_all.m  test_read_brotli_matlab.m  test_read_metadata.py  test_write_roundtrip_matlab.m
